Finished warm plasma dielectric tensor. Finished geometric algebra

--- a/EBW/appendix.tex
+++ b/EBW/appendix.tex
@@ -95,6 +95,9 @@ These terms are the components of a cross product, hence we see this is equal to
 \begin{equation}
 	I_n'(x) = \frac{1}{2} \left( I_{n+1}(x) + I_{n-1}(x) \right)
 \end{equation}
+\begin{equation}
+	\lim_{\x \to 0} I_n \left( x \right) = \left( \frac{x}{2} \right)^{|n|}
+\end{equation}
 
 \subsubsection{Bessel Function Integrals}
 \begin{equation}
@@ -110,7 +113,7 @@ These terms are the components of a cross product, hence we see this is equal to
 	4\int_0^\infty \left(J_n' \left( x \sqrt{2b} \right) \right)^2 x^3 e^{-x^2} dx = \left[ \frac{n^2}{b}I_n(b) + 2b \left( I_n(b) - I_n'(b) \right) \right] e^{-b}
 \end{equation}
 
-These equations are derived from Weber's integral with q=1 [reference?]
+These equations are derived from Weber's second integral with q=1 [reference?]
 \begin{equation}\label{weber_integral}
 	\int_0^\infty J_n \left(\alpha x \right) J_n \left( \beta x \right) xe^{-x^2} dx = \frac{1}{2} e^{-\left( \frac{ \alpha^2 + \beta^2 }{4} \right)} I_n \left( \frac{\alpha \beta}{2} \right)
 \end{equation}
@@ -176,12 +179,73 @@ Substituting in we get
 Equating with the left side with $\alpha = \beta = \sqrt{2b}$ gives \eqref{bessel_int_jn_prime2}.
 
 \subsection{Plasma Dispersion Function}
-\begin{equation}
-	Z(\zeta) = \frac{1}{\sqrt{\pi}} \int_{-\infty}^\infty \frac{e^{-x^2}}{x-\zeta} dx
+The Plasma Dispersion Function $Z$ appears in the derivation of the hot plasma dielectric tensor defined as
+\begin{equation}\label{plasma_dispersion_function}
+	Z(\zeta) := \frac{1}{\sqrt{\pi}} \int_{-\infty}^\infty \frac{e^{-x^2}}{x-\zeta} dx
 \end{equation}
+
+Two similar integrals also appear, the first being
+\begin{equation*}
+	\frac{1}{\sqrt{\pi}} \int_{-\infty}^\infty \frac{xe^{-x^2}}{x-\zeta} dx = \frac{1}{\sqrt{\pi}} \int_{-\infty}^\infty \frac{\left( x - \zeta + \zeta \right)e^{-x^2}}{x-\zeta} dx
+\end{equation*}
 \begin{equation}
-	Z'(\zeta) = 1 + \zeta Z(\zeta) = \frac{1}{\sqrt{\pi}} \int_{-\infty}^\infty \frac{xe^{-x^2}}{x-\zeta} dx
+	= \frac{1}{\sqrt{\pi}} \int_{-\infty}^\infty e^{-x^2} dx + \frac{1}{\sqrt{\pi}} \int_{-\infty}^\infty \frac{\zeta e^{-x^2}}{x-\zeta} dx = 1 + \zeta \frac{1}{\sqrt{\pi}} \int_{-\infty}^\infty \frac{e^{-x^2}}{x-\zeta} dx
 \end{equation}
+
+using Gaussian integral is $\int_{-\infty}^\infty e^{-x^2} dx=\sqrt{\pi}$. Hence we get
 \begin{equation}
-	\zeta Z'(\zeta) = \zeta \left( 1 + \zeta Z(\zeta) \right) = \frac{1}{\sqrt{\pi}} \int_{-\infty}^\infty \frac{x^2 e^{-x^2}}{x-\zeta} dx
+	\frac{1}{\sqrt{\pi}} \int_{-\infty}^\infty \frac{xe^{-x^2}}{x-\zeta} dx = 1 + \zeta Z \left( \zeta \right)
+\end{equation}
+
+We can write this in terms of the derivative $Z'$, given by
+\begin{equation}
+	Z' \left( \zeta \right) = \frac{\zeta}{\partial \zeta} \frac{1}{\sqrt{\pi}} \int_{-\infty}^\infty \frac{e^{-x^2}}{x-\zeta} dx = \frac{1}{\sqrt{\pi}} \int_{-\infty}^\infty \frac{e^{-x^2}}{\left( x-\zeta \right)^2} dx
+\end{equation}
+
+Integrating by parts as follows allows us to express $Z'$ in terms of $Z$
+\begin{equation*}
+	u = e^{-x^2} \implies du = -2x e^{-x^2}
+\end{equation*}
+\begin{equation*}
+	dv = \frac{1}{\left( x - \zeta \right)^2} \implies v = \frac{-1}{x - \zeta}
+\end{equation*}
+\begin{equation*}
+	Z' \left( \zeta \right) = \frac{1}{\sqrt{\pi}} \left[ \left. \frac{-e^{-x^2}}{x - \zeta} \right|_{-\infty}^\infty  - \frac{1}{\sqrt{\pi}} \int_{-\infty}^\infty \frac{2x e^{-x^2}}{x - \zeta} dx \right]
+\end{equation*}
+\begin{equation}
+	= \frac{-2}{\sqrt{\pi}} \int_{-\infty}^\infty \frac{xe^{-x^2}}{x-\zeta} dx = -2 \left( 1 + \zeta Z \left( \zeta \right) \right)
+\end{equation}
+
+Hence
+\begin{equation}\label{plasma_dispersion_x_int}
+	\frac{1}{\sqrt{\pi}} \int_{-\infty}^\infty \frac{xe^{-x^2}}{x-\zeta} dx = 1 + \zeta Z \left( \zeta \right) = -\frac{Z' \left( \zeta \right)}{2}
+\end{equation}
+
+The second integral is
+\begin{equation}
+	\frac{1}{\sqrt{\pi}} \int_{-\infty}^\infty \frac{x^2 e^{-x^2}}{x-\zeta} dx
+\end{equation}
+
+Again integrating by parts we get
+\begin{equation*}
+	u = \frac{x}{x - a} \implies du = \frac{x - a - x}{\left(x - a\right)^2} = frac{a}{\left(x - a\right)^2}
+\end{equation*}
+\begin{equation*}
+	dv = xe^{-x^2} \implies v = -\frac{e^{-x^2}}{2}
+\end{equation*}
+\begin{equation*}
+	\frac{1}{\sqrt{\pi}} \int_{-\infty}^\infty \frac{x^2 e^{-x^2}}{x-\zeta} dx = \frac{1}{\sqrt{\pi}} \left. \frac{-xe^{-x^2}}{2 \left( x - a \right)} \right|_{-\infty}^\infty - \frac{1}{2 \sqrt{\pi}} \int_{-\infty}^\infty \frac{\zeta e^{-x^2}}{\left( x - \zeta \right)^2} dx
+\end{equation*}
+\begin{equation}
+	= -\frac{\zeta}{2} \frac{1}{\sqrt{\pi}} \int_{-\infty}^\infty \frac{e^{-x^2}}{\left( x - \zeta \right)^2} dx
+\end{equation}
+
+We recognise the integral equals $Z' \left( \zeta \right)$. Hence
+\begin{equation}\label{plasma_dispersion_x2_int}
+	\frac{1}{\sqrt{\pi}} \int_{-\infty}^\infty \frac{x^2 e^{-x^2}}{x-\zeta} dx = \frac{-\zeta}{2} Z' \left( \zeta \right) = \zeta \left( 1 + \zeta Z \left( \zeta \right) \right)
+\end{equation}
+
+In the limit $\zetans \to \infty$
+\begin{equation}
+	Z \to -\frac{1}{\zetans} \quad Z' \to \frac{1}{\zetans^2}
 \end{equation}
