--- a/EBW/definitions.tex
+++ b/EBW/definitions.tex
@@ -16,8 +16,9 @@
 \def \v{\textbf{v}}
 \def \vpar{v_\parallel}
 \def \vper{v_\perp}
-%\def \spar{s_\parallel}
-%\def \sper{s_\perp}
+\def \upar{u_\parallel}
+\def \uper{u_\perp}
+\def \zetans{\zeta_{ns}}
 \def \betapar{\beta_\parallel}
 \def \betaper{\beta_\perp}
 \def \kpar{k_\parallel}
