--- a/EBW2/EBW_Math_Supplement.tex
+++ b/EBW2/EBW_Math_Supplement.tex
@@ -1,17 +1,22 @@
 \documentclass[a4paper, 12pt]{article}
+
 % Packages
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{bm}
+\usepackage[backend=biber, style=phys]{biblatex}
 
 \newcommand*{\uubar}[1]{\underline{\underline{#1}}}
 \newcommand*{\bfhat}[1]{\bm{\hat{#1}}}
+
+% Bibliography
+\addbibresource{../ebw.bib}
 
 \begin{document}
 \title{Emission, Propagation and Mode Conversion of Electron Bernstein Waves - Mathematical Supplement}
 \author{Thomas Wilson}
 \maketitle{}
-This document follows Chapter 1 from Francesco Volpe's Thesis 'Electron Bernstein emission diagnostic of electron temperature profile at W7-AS Stellarator' in Section 2. I have included extra mathematical details and anything I think is relevant to understanding in section 1.
+This document follows Chapter 1 Francesco Volpe's Thesis \cite{volpe_phd_thesis} in Section 2. I have included extra mathematical details and anything I think is relevant to understanding in section 1.
 
 \input{plasma_definitions.tex}
 
@@ -21,6 +26,5 @@ This document follows Chapter 1 from Francesco Volpe's Thesis 'Electron Bernstei
 
 \input{electron_bernstein_wave_absorption.tex}
 
-\bibliographystyle{plain}
-\bibliography{ebw_bibliography}
+\printbibliography
 \end{document}
